@@ -1,5 +1,8 @@
-2009-06-04  David Rousseau  <droussea@lxbuild084.cern.ch>
+2009-06-05 Sarka Todorova <sarka.todorova@cern.ch>
+	* adjust hardcoded partition ( cryoring leaking ...)
+	* tagged as MuonTrackingGeometry-00-05-09
 
+2009-06-04  David Rousseau  <droussea@lxbuild084.cern.ch>
 	* python/ConfiguredMuonTrackingGeometry.py : no more printout of Configurable 
 	* tagged as MuonTrackingGeometry-00-05-08
 	
